<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Room Monitor</string>
    <string name="temperature">Temperature:</string>
    <string name="_0_00_u00b0c">0.00°C</string>
    <string name="export">Export</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="disconnect">Disconnect</string>
    <string name="dataButton">Data</string>
    <string name="humidity">Humidity:</string>
    <string name="hum_00">00%</string>
    <string name="pollution_level">Pollution Level:</string>
    <string name="status">Status:</string>
    <string name="normal">Normal</string>
    <string name="select_device">Select a Device to Connect</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>


    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="_18_09_2017_12_26_15_am">18/09/2017 12:26:15 AM</string>



    <string name="title_activity_login">Sign in</string>
    <string name="login">Login</string>
    <string name="login_status">Sign In</string>
    <string name="usernamelbl">Username</string>
    <string name="passwordlbl">Password</string>
    <string name="disconnect">Disconnect</string>

</resources>
