<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.startinnovationhub.emmanuel.roommonitordashboard.DetailActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Login_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/login_status"
            android:textColor="@color/textColorS"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="left">

        <TextView
            android:id="@+id/usertxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:textColor="@color/textColorS"
            android:text="@string/usernamelbl"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/usertxt"
            android:layout_toEndOf="@id/usertxt"
            android:layout_toRightOf="@id/usertxt"
            android:hint="@string/usernamelbl"
            android:background="@color/textColorS"
            android:textSize="@dimen/textSize"
            android:textCursorDrawable="@null"/>

        <TextView
            android:id="@+id/passtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usertxt"
            android:padding="10dp"
            android:textColor="@color/textColorS"
            android:text="@string/passwordlbl"
            android:textSize="@dimen/textSize" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/passtxt"
            android:layout_toEndOf="@id/passtxt"
            android:layout_toRightOf="@id/passtxt"
            android:hint="@string/passwordlbl"
            android:background="@color/textColorS"
            android:textSize="@dimen/textSize"
            android:textCursorDrawable="@null"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/Login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textColor="@color/background"
            android:textSize="@dimen/textSizeS"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>
